@@ -1,5 +1,6 @@
 CHANGELOG
 
+2021-09-27: Target to API 30 and fix TTS query permission.
 2021-08-09: New vocabulary from qep'a' 2021. Allow user-triggered database update over metered Internet.
 2021-04-13: Fix issue where attributes were not displayed in entry title if {pIqaD} is enabled.
 2021-04-09: Treat epithets as beings capable of language for the purposes of analysis.
